2007-10-04  Nick Clifton  <nickc@redhat.com>

	* configure.in (WIN32LDFLAGS): Rename to SHARED_LDFLAGS.
	(WIN32LIBADD): Rename to SHARED_LIBADD
	(SHARED_DEPENDENCIES): New exported variable.
	(enable_shared): Add dependency upon libbfd.la for non-cygwin
	based shared library builds.
	* Makefile.am (libopcodes_la_DEPENDENCIES): Append
	SHARED_DEPENDENCIES.
	(libopcodes_la_LIBADD): Rename WIN32LIBADD to SHARED_LIBADD.
	(libopcodes_la_LDFLAGS): Rename WIN32LDFLAGS to SHARED_LDFLAGS.
	* configure: Regenerate.
	* Makefile.in: Regenerate.

	PR gas/5100
	* arc-opc.c (insert_offset): Fix spelling mistake in error
	message.

2007-10-03  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (OP_REG): Set add to 0 only when needed.
	(OP_C): Likewise.
	(OP_D): Likewise.
	(OP_MMX): Likewise.
	(OP_XMM): Likewise.
	(OP_EM): Likewise.
	(OP_MXC): Likewise.
	(OP_EX): Likewise.

2007-10-03  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-opc.tbl: Update SSE comments.

2007-10-01  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (THREE_BYTE_0FBA): Renamed to ...
	(THREE_BYTE_0F7B): This.
	(dis386_twobyte): Updated.
	(three_byte_table): Updated comments.

2007-10-01  M R Swami Reddy <MR.Swami.Reddy@nsc.com>

	* cr16-opc.c: Updated the branch on condition instructions with
	RELAXABLE flag.

2007-09-30  H.J. Lu  <hongjiu.lu@intel.com>

	* 386-dis.c (prefix_table): Reformat comment.

2007-09-29  H.J. Lu  <hongjiu.lu@intel.com>

	* 386-dis.c (USE_GROUPS): Renamed to ...
	(USE_REG_TABLE): This.
	(USE_OPC_EXT_TABLE): Renamed to ...
	(USE_MOD_TABLE): This.
	(USE_OPC_EXT_RM_TABLE): Renamed to ...
	(USE_RM_TABLE): This.
	(USE_XXX_TABLE): Reordered.
	(GRP): Renamed to ...
	(REG_TABLE): This.
	(OPC_EXT_TABLE): Renamed to ...
	(MOD_TABLE): This.
	(OPC_EXT_RM_TABLE): Renamed to ...
	(RM_TABLE): This.
	(GRP_XXX): Renamed to ...
	(REG_XXX): This.
	(PREGRP_XXX): Renamed to ...
	(PREFIX_XXX): This.
	(OPC_EXT_XXX): Renamed to ...
	(MOD_XXX): This.
	(OPC_EXT_RM_XXX): Renamed to ...
	(RM_XXX): This.